# gluetun-monitor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.example.yml
.github/workflows/: ci.yml  release.yml
scripts/: discover-asns.sh
src/: config.rs  lib.rs  main.rs  models.rs
src/handlers/: check.rs  mod.rs  status.rs
src/ip_lookup/: gluetun.rs  ifconfig.rs  ipapi.rs  mod.rs
src/monitoring/: change_detector.rs  mod.rs  periodic.rs
src/notification/: mod.rs  ntfy.rs
tests/: config_tests.rs  handler_tests.rs  ip_lookup_tests.rs  models_tests.rs
