[package]
name = "gluetun-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Satya"]
description = "VPN health monitoring service with Gluetun integration, ASN validation, and notifications"
license = "Apache-2.0"
repository = "https://github.com/mlgruby/gluetun-monitor"
keywords = ["vpn", "monitoring", "gluetun", "health-check", "notifications"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "gluetun-monitor"
path = "src/main.rs"

[dependencies]
# HTTP Server
axum = "0.7"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
mockito = "1.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
